go-app-1-chart/templates/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-1
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: go-app-1
  sessionAffinity: None
  type: ClusterIP
